5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4076/executions/1602_2049.log
== TEST (2019-03-20 18:54:42) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print("dividendo")
print("divisor")
print("quociente")
print("resto")
-- OUTPUT:
dividendo
divisor
quociente
resto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:54:47) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print("dividendo")
print("divisor")
print("quociente")
print("resto")
-- EXECUTION TIME:
0.204253
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
dividendo
divisor
quociente
resto
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
dividendo
divisor
quociente
resto
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
dividendo
divisor
quociente
resto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:55:05) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print("dividendo")
print("divisor")
print("quociente")
print("resto")
-- EXECUTION TIME:
0.198876
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
dividendo
divisor
quociente
resto
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
dividendo
divisor
quociente
resto
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
dividendo
divisor
quociente
resto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:08) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print("dividendo")
print("divisor")
print("quociente")
print("resto")
-- OUTPUT:
dividendo
divisor
quociente
resto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:30) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print("dividendo")
print("divisor")
print("quociente")
print("resto")
-- OUTPUT:
dividendo
divisor
quociente
resto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:18) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print(x)
print(y)
print("//")
print("%")
-- OUTPUT:
8
5
//
%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:50) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print("x")
print("y")
print("//")
print("%")
-- OUTPUT:
x
y
//
%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:27) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print(x)
print(y)
print(//)
print(%)
-- ERROR:
File "XXXX", line 5
    print(//)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:07:00) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print(x)
print(y)
print(x//y)
print(x%y)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:07:05) 
-- CODE:
x=int(input("digite o dividendo"))
y=int(input("digite o divisor"))
print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.276281
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
